# LegacyCode

./: README.md  eteki
Amazing FTP/: RemoteDlg.cpp  RemoteDlg.h  ServerSetupDlg.cpp  ServerSetupDlg.h  SortHeaderCtrl.cpp  SortListCtrl.cpp  SortListCtrl.h  StdAfx.cpp  StdAfx.h  UserInputDlg.cpp  UserInputDlg.h  amazingFTP.cpp  amazingFTP.h  ftp.cpp  ftp.h  readme.md  resource.h
Amazing FTP/res/: amazingFTP.rc2
BDM/: ASYNC.C  ASYNC.H  BLAKRACK.RPT  CDP.C  CDP.ERR  CDP.H  CDP.MAK  CDP.MAP  CDP00.C  CDP01.C  CDP02.C  LOGFILE  readme.md
Enfotrust/: Database.cpp  Database.h  Snoopy.cpp  Snoopy.h  Snoopy.rc  SnoopyMain.cpp  readme.html  readme.md  resource.h
EvolutionRobotics/: placekeeper  readme.md
EvolutionRobotics/DigitalConsole/: DigitalConsole.cpp  DigitalConsole.h  DigitalOutput.cpp  DigitalOutput.h  readme.md
EvolutionRobotics/HobbyMonitor Source only/: CAnalogPortsDlg.cpp  CAnalogPortsDlg.h  CConfigureDlg.cpp  CConfigureDlg.h  CDigitalPortsDlg.cpp  CDigitalPortsDlg.h  ConfigurationSettings.cpp  ConfigurationSettings.h  DigitalPortsDlg.cpp  DigitalPortsDlg.h  EnterpriseArchitextClass1.cpp  EnterpriseArchitextClass1.h  HobbyIOMonitor.cpp  HobbyIOMonitor.h  HobbyIOMonitor.rc  HobbyIOMonitor.sln  HobbyIOMonitorDlg.cpp  HobbyIOMonitorDlg.h  (+3 more)
Nov14Test/: create-a-new-react-app.html
SGI/C++/PaysafeCode/Paysafe/: Makefile.am  Makefile.in  PaysafeApi.cpp  PaysafeApi.h  PaysafeClient.cpp  PaysafeClient.h  PaysafeDefines.h  PaysafeHelper.cpp  PaysafeHelper.h
VisualStudio Notes/: html2php.cpp  html2php.sln  html2php.vcxproj  html2php.vcxproj.filters  readme.md
(+155 files in other folders)
